<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/casa"
            android:title="@string/inicio" />
        <item
            android:id="@+id/visualizar"
            android:icon="@drawable/mapai"
            android:title="@string/visualizar" />
        <item
            android:id="@+id/situacion"
            android:icon="@drawable/mapai"
            android:title="@string/situacionMinas" />
    </group>

    <item android:title="@string/acercaDe">
        <menu>
            <item
                android:id="@+id/acercaDe"
                android:icon="@drawable/informacion"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
