<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tarjetas"
    card_view:cardElevation="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#4163c9"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/mapa"
                />

            <TextView
                android:id="@+id/txtDepartamentoR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="afdas:"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#ffffff"
                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <LinearLayout
        android:layout_width="115dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        >

        <TextView
            android:id="@+id/txtanio"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/anio"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#4163c9"
            />

        <TextView
            android:id="@+id/txtMunicipio"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/municipio"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#4163c9"
            />

        <TextView
            android:id="@+id/txtSitio"
            android:layout_width="100dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/sitio"
            android:textColor="#4163c9"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTipoArea"
            android:layout_width="100dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#4163c9"
            android:layout_height="wrap_content"
            android:text="@string/tipoArea"
            />

        <TextView
            android:id="@+id/txtEstado"
            android:layout_width="100dp"
            android:textColor="#4163c9"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:textSize="20dp"
            android:textStyle="bold"
            />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="70dp"

            >

            <TextView
                android:id="@+id/txtAnioR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="afdas:"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtMunicipioR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="afdas:"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtSitioR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="afdas:"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtTipoAreaR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="afdas:"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtEstadoR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="afdas:"
                android:textSize="20dp"
                android:textStyle="bold"
                />

            <ImageButton
                android:id="@+id/ibMapa"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="bottom|end"
                android:src="@drawable/localizacion" />


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>